# dev-rag

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEV-RAG-ARCHITECTURE.md  Dockerfile  IMPLEMENTATION-ORDER.md  README.md  current_context.md  docker-compose.mcp.yml  docker-compose.yml  pyproject.toml  resume.sh
data/books/: .gitkeep
data/evaluation/: ai_questions.yaml  devops_questions.yaml  python_questions.yaml  travel_questions.yaml
docs/: BRANCH-REVIEW-CHECKLIST.md  INGESTED-BOOKS.md  RUNBOOK.md  TODO.md  USER-GUIDE.md  ansible-security-project.md  dev-rag-diagrams.jsx  dev-rag-step2-redefined.md  opus-review-prompt.md
docs/plans/: dev-rag-phase1a-plan.md  dev-rag-phase2-plan.md
docs/reviews/: FABLE-REVIEW-2026-07-05.md  OPUS-REVIEW-VERIFICATION.md  OPUS-REVIEW.md
eval/: loader.py  reporter.py  run_eval.py  runner.py  scorer.py
eval/baselines/: 2026-07-06_hybrid_rrf.json  2026-07-06_hybrid_rrf_3books.json  2026-07-06_hybrid_rrf_4books.json  2026-07-06_hybrid_rrf_4books_37q.json  2026-07-06_hybrid_rrf_4books_39q.json  2026-07-06_reranker_c10.json  2026-07-06_reranker_c10_4books.json  2026-07-06_reranker_c10_4books_39q.json  2026-07-08_python_6q.json  2026-07-09_ai_1book_7q.json  2026-07-09_hybrid_rrf_5books_39q.json  2026-07-09_hybrid_rrf_6books_39q.json  2026-07-09_hybrid_rrf_7books_39q.json  2026-07-09_python_2books_6q.json  2026-07-10_python_3books_6q.json  2026-07-10_python_4books_6q.json  2026-07-16_ai_2books_8q.json
mcp/: Dockerfile  compress.py  mcp_server.py  pyproject.toml
mcp/tests/: test_mcp_e2e.py  test_mcp_server.py
migrations/: 001_initial_schema.sql  002_add_fts5.sql  003_fts_update_trigger.sql
planning/: dev-rag-evaluation-strategy.md  headroom-integration-spec.md  hybrid-search-spec.md  ingest-pipeline-spec.md  pgvector-migration-spec.md  reranker-spec.md
scripts/: fbl006_diagnose.py  serve.sh
src/dev_rag/: __init__.py  agent.py  api.py  graph.py  ingest.py  reranker.py  retrieve.py  retrieve_hybrid.py  retrieve_sparse.py  settings.py
src/dev_rag/ingest/: __init__.py  chunk.py  clean.py  embed.py  extract.py  load.py  pipeline.py  util.py  verify.py
tests/: test_agent.py  test_api.py  test_api_e2e.py  test_ask_route.py  test_eval.py  test_hybrid_search.py  test_ingest.py  test_migrations.py  test_reranker.py  test_retrieve.py  test_sparse_search.py
tests/test_ingest/: test_chunk.py  test_clean.py  test_embed.py  test_extract.py  test_load.py  test_pipeline.py  test_util.py  test_verify.py
