[project]
name = "dev-rag"
version = "0.1.0"
description = "Personal expert RAG system for DevOps, Travel, and Python corpora"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic-ai>=0.0.14",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "networkx>=3.0",
    "PyYAML>=6.0",
    "asyncpg>=0.29.0",
    "torch>=2.12.1",
    "pymupdf4llm>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "mcp/tests"]
addopts = "--import-mode=importlib"
pythonpath = ["mcp"]

[tool.hatch.build.targets.wheel]
packages = ["src/dev_rag"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
