[project]
name = "dev-rag-mcp"
version = "0.1.0"
description = "MCP server exposing the dev-rag retrieval system to Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
http = [
    "mcp[http]>=1.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",       # mock httpx for tests
]

[project.scripts]
dev-rag-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
